fix responsive scrollbar workspace

--- a/src/app/components/workspace/workspace-menu/channel-section/channel-section.component.scss
+++ b/src/app/components/workspace/workspace-menu/channel-section/channel-section.component.scss
@@ -18,7 +18,7 @@
         gap: 15px;
         justify-content: start;
 
-        &:hover{
+        &:hover {
             cursor: pointer;
             user-select: none;
             color: $thirdColor;
@@ -50,7 +50,7 @@
             height: 30px;
             transition: transform 0.3s ease;
 
-            &:hover{
+            &:hover {
                 cursor: pointer;
 
                 svg {
@@ -61,7 +61,7 @@
             }
         }
 
-        .dropdown-btn.rotated{
+        .dropdown-btn.rotated {
             transform: rotate(-90deg);
         }
 
@@ -88,7 +88,7 @@
         background-color: unset;
         border: unset;
 
-        @media(max-width: $breakpoint1){
+        @media(max-width: $breakpoint1) {
             svg {
                 path {
                     fill: $thirdColor;
@@ -117,14 +117,14 @@
             padding-left: 25px;
 
             .open-channel-content {
-                padding: 4px 80px 4px 20px;
+                padding: 4px 20px;
                 display: flex;
                 gap: 10px;
                 border: unset;
                 background: unset;
 
                 &:hover,
-                &.active{
+                &.active {
                     cursor: pointer;
                     border-radius: 20px;
                     background-color: $backgroundColor;
@@ -140,9 +140,9 @@
                             }
                         }
                     }
-            }
+                }
 
-                &:hover{
+                &:hover {
                     cursor: pointer;
                 }
 
@@ -172,7 +172,7 @@
             padding: 4.5px 10px 4.5px;
             gap: 10px;
 
-            &:hover{
+            &:hover {
                 color: $thirdColor;
                 cursor: pointer;
 
@@ -195,14 +195,14 @@
                 background-color: unset;
                 border: unset;
 
-                @media(max-width: $breakpoint1){
+                @media(max-width: $breakpoint1) {
                     svg {
                         path {
                             fill: $thirdColor;
                         }
-                        
+
                     }
-               
+
                 }
             }
 
@@ -212,7 +212,7 @@
                 line-height: 24.55px;
                 text-align: left;
 
-                @media(max-width: $breakpoint1){
+                @media(max-width: $breakpoint1) {
                     color: $thirdColor;
                 }
             }
