--- a/src/app/components/workspace/workspace.component.scss
+++ b/src/app/components/workspace/workspace.component.scss
@@ -11,10 +11,10 @@ main {
         position: absolute;
         width: 100%;
 
-        @media (max-width: $breakpoint1){
+        @media (max-width: $breakpoint1) {
             background-color: $backgroundColor;
         }
-       
+
     }
 
     .container {
@@ -25,7 +25,7 @@ main {
         height: 100%;
         height: calc(100% - 94px);
         overflow-x: hidden;
-        top: 99px;
+        top: 94px;
 
         app-workspace-menu {
             transform-origin: center;
@@ -35,11 +35,11 @@ main {
             transform: translateX(-100%);
             transition: all 125ms ease-in-out;
 
-            @media (max-width: $breakpoint1){
+            @media (max-width: $breakpoint1) {
                 width: 100%;
             }
 
-            &.openWorkspaceMenu{
+            &.openWorkspaceMenu {
                 position: relative;
                 left: 0;
                 transform: translateX(0);
@@ -65,7 +65,7 @@ main {
                 transform: translateX(0);
             }
 
-            @media (max-width: $breakpoint1){
+            @media (max-width: $breakpoint1) {
                 width: 100%;
             }
         }
@@ -88,7 +88,7 @@ main {
     background-color: $backgroundColor;
     z-index: 10;
 
-    &.hidden{
+    &.hidden {
         display: none;
     }
 }
@@ -127,18 +127,18 @@ main {
     animation: flash 0.5s ease-out infinite alternate;
 }
 
-@keyframes flash{
-    0%{
+@keyframes flash {
+    0% {
         background-color: $secondaryColor;
         box-shadow: 20px 0 $secondaryColor, -20px 0 $primaryColor;
     }
 
-    50%{
+    50% {
         background-color: $primaryColor;
         box-shadow: 20px 0 $secondaryColor, -20px 0 $secondaryColor;
     }
 
-    100%{
+    100% {
         background-color: $secondaryColor;
         box-shadow: 20px 0 $primaryColor, -20px 0 $secondaryColor;
     }
@@ -152,22 +152,25 @@ aside {
     left: 0;
     bottom: 172.5px;
     z-index: 9;
-    background-color: #fff;                  
+    background-color: #fff;
     padding: 23px 14px 23px 14px;
     border-radius: 0px 30px 30px 0px;
     box-shadow: 4px 4px 7px 0px #00000033;
 
-    &:hover{
+    &:hover {
         cursor: pointer;
         color: $thirdColor;
+
         .label {
             font-weight: 700;
         }
+
         .icon {
             svg {
                 path {
                     stroke: $thirdColor;
                 }
+
                 rect {
                     stroke: $thirdColor;
                 }
